@@ -61,6 +61,7 @@
     <string id="30105">Play Voice Mail?</string>
     <string id="30106">Delete Voice Mail?</string>
     <string id="30107">Refresh</string>
+    <string id="30108">Dialpad</string>
     <!-- CDR -->
     <string id="30110">Call Detail Record</string>
     <string id="30111">Account Code</string>
